--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -31,6 +31,9 @@ In compliant environments, the volume of sensor data far exceeds human processin
   <Card title="Interoperability" icon="globe">
     Real-time Cursor-on-Target (CoT) streaming for ATAK/WinTAK integration.
   </Card>
+  <Card title="Operational Console" icon="desktop">
+    Web-based Common Operating Picture (COP) for real-time tracking, task management, and fleet status.
+  </Card>
 </CardGroup>
 
 ## System Overview
